--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <H1>You are playing Rock Paper Scissors</H1>
     <script src="index.js"></script>   
 </body>
 </html>
